<?xml version="1.0"?>
<package>
  <name>eskf_odometry_ros</name>
  <version>0.0.1</version>
  <description>The eskf_odometry_ros package</description>
  <maintainer email="asantamaria@iri.upc.edu">asantamaria</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>iri_base_algorithm</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>px_comm</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>iri_base_algorithm</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>px_comm</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>